fixed an alignment issue

--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,8 @@ a{
   justify-content: center;
   color: white;
   text-align: center;
+  direction: rtl;
+  flex-wrap: wrap;
 }
 
 .header_text {
@@ -118,19 +120,27 @@ a{
   transition: 500ms;
 }
 
-.message_edit_section{
+.message_sections{
+  display: flex;
+  flex-direction: column;
   flex: 1;
-  min-height: 75vh;
-  max-height: 75vh;
-  padding: 20px;
+  min-height: 80vh;
+  max-height: 80vh;
+  min-width: 500px;
+  /* padding: 0px; */
   margin: 20px;
   margin-top: 0px;
 }
-.message_output_section{
+
+.message_output{
+  width: 85%; 
   flex: 1;
-  min-height: 75vh;
-  max-height: 75vh;
   padding: 20px;
-  margin: 20px;
-  margin-top: 0px;
+  resize: none;
+  font-size: 15px;
+  margin-bottom: 25px;
+}
+
+.message_output:focus {
+  outline: none;
 }
